# RPEC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindSDL2_image.cmake
src/: game.hpp  main.cpp
src/MacOS/: Info.plist.cmake
src/entities/: entity.hpp  player.hpp
src/events/: controls.hpp  events.hpp  sdlevents.cpp  sdlevents.hpp
src/graphics/: openglrenderer.hpp  renderer.hpp  sdlopenglrenderer.hpp
